--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "domify": "^1.3.3",
-    "draggy": "^1.3.1",
+    "draggy": "github:juliangruber/draggy#fix/electron",
     "emmy": "^5.3.2",
     "inherits": "^2.0.1",
     "mucss": "^1.0.2",
